# radio-control

./: .gitignore  .gitmodules  README.md  wget-log  wget-log.1  wget-log.2
.github/workflows/: build-lxc-arm32.yml
deploy/lxc/: build-package.sh  setup.sh
deployment/lxc/: build-package.sh
deployment/podman/: README.md  deploy.sh  e2e-validate.sh  remove.sh  run-local.sh  setup.sh
docs/: icd_tnn_↔_radio_logical_ieee_style_template_editable.md  radio_control_api_open_api_v_1.md
docs/contract/: openapi.yaml
open-issues/: [Fixed]2026-04-19-issue-17-silvus-mock-container-port-conflict-sigsegv.md  [Fixed]2026-06-02-issue-08-radio-service-port-allocation-and-api-contracts.md  [Fixed]2026-06-02-issue-09-monitor-frontdoor-scope-creep.md  [Fixed]2026-06-02-issue-11-silvus-error-normalization.md  [Fixed]2026-06-02-issue-13-audit-log-uses-dts-common-rotated-file.md  [Fixed]2026-06-02-issue-15-health-endpoint-doc-aligns-dts-common.md  [Fixed]2026-06-02-issue-18-ready-event-reemitted-for-late-sse-clients.md  [Fixed]2026-06-02-issue-19-adopt-timeauthority-for-outbound-telemetry.md  [Fixed]2026-06-02-issue-20-streamcaster-4000-power-license-and-max-power-mode-modeled.md  [Open]2026-04-02-issue-08-radio-service-missing-port-allocation-and-api-contracts.md  [Open]2026-04-12-issue-09-monitor-frontdoor-scope-creep.md  [Open]2026-04-19-issue-10-silvus-adapter-sync-blocking-and-no-per-radio-serialization.md  [Open]2026-04-19-issue-11-silvus-error-taxonomy-normalization-incomplete.md  [Open]2026-04-19-issue-12-no-duty-cycled-probing-soft-boot-or-capability-refresh.md  [Open]2026-04-19-issue-13-audit-log-is-stdout-only-no-rotated-file.md  [Open]2026-04-19-issue-14-no-channel-region-derivation-or-hot-reload-signed-config.md  [Open]2026-04-19-issue-15-health-endpoint-shape-divergence-from-api-v1-spec.md  [Open]2026-04-19-issue-16-silvus-mock-cpp-test-coverage-gap-after-go-deletion.md  [Open]2026-04-19-issue-18-ready-event-evicted-from-ring-buffer-stalls-new-sse-clients.md  [Open]2026-06-02-issue-19-adopt-timeauthority-for-outbound-telemetry.md  [Open]2026-06-02-issue-21-derived-silvus-icd-needs-page-level-vendor-traceability.md
rcc/: .gitignore  CMakeLists.txt  README.md  rcc-smoke.yaml
rcc/config/: default.yaml  e2e.yaml  production.yaml
rcc/include/rcc/: application.hpp  version.hpp.in
rcc/include/rcc/adapter/: radio_adapter.hpp  silvus_adapter.hpp
rcc/include/rcc/api/: api_gateway.hpp  monitor_page.hpp
rcc/include/rcc/audit/: audit_logger.hpp
rcc/include/rcc/auth/: authenticator.hpp
rcc/include/rcc/command/: orchestrator.hpp
rcc/include/rcc/config/: config_manager.hpp  types.hpp
rcc/include/rcc/core/: application.hpp
rcc/include/rcc/radio/: radio_manager.hpp
rcc/include/rcc/telemetry/: telemetry_hub.hpp
rcc/src/: CMakeLists.txt  main.cpp
rcc/src/adapter/: radio_adapter.cpp  silvus_adapter.cpp
rcc/src/api/: api_gateway.cpp
rcc/src/audit/: audit_logger.cpp
rcc/src/auth/: authenticator.cpp
rcc/src/command/: orchestrator.cpp
rcc/src/config/: config_manager.cpp
rcc/src/core/: application.cpp  main.cpp
rcc/src/radio/: radio_manager.cpp
rcc/src/telemetry/: telemetry_hub.cpp
rcc/test/: CMakeLists.txt
rcc/test/integration/: test_radio_manager.cpp  test_silvus_adapter_contract.cpp  test_telemetry_sse.cpp
rcc/test/support/: fake_radio_server.cpp  fake_radio_server.hpp  test_globals.cpp  test_utils.hpp
rcc/test/unit/: test_audit_logger.cpp  test_authenticator.cpp  test_common_types.cpp  test_config_manager.cpp  test_monitor_page.cpp  test_silvus_adapter.cpp
silvus-mock/: .gitignore  CMakeLists.txt  Containerfile  README.md
silvus-mock/cmd/silvusmock/: main.go
silvus-mock/src/: http_server.cpp  http_server.hpp  main.cpp  maintenance_server.cpp  maintenance_server.hpp  silvus_mock.cpp  silvus_mock.hpp  web_assets.cpp  web_assets.hpp
silvus-mock/test/: silvus_mock_contract_test.cpp
